deployments/jellyfin/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: jellyfin-web
      protocol: TCP
      port: 8096
      targetPort: 8096
