deployments/jellyfin/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - jellyfin.imagilan.imaginator.com
      secretName: jellyfin.imagilan.imaginator.com-tls
  rules:
    - host: jellyfin.imagilan.imaginator.com
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  name: jellyfin-web
            pathType: Prefix
            path: "/"
